--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 </div>
             </div>
             <div class="footerRightMenu">
-                <span class="copyright">@Pugazhini. All rights reserved. 2022.</span>
+                <span class="copyright">@Jaiganesh. All rights reserved. 2022.</span>
             </div>
         </div>
     </footer>
